aggiunto contenuto main

--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <title>shoes</title>
 </head>
 <body>
+    <header>
     
+    <input type="button" class="button"  value="1">
+    <input type="button" class="button"  value="2">
+    <input type="button" class="button"  value="3">
+    
+    </header>
+    <main>
+
+        <section class="red">
+            <div class="contenitore">
+                <img src="img/01.png" alt="">
+                <h1>La Nostra scarpa di punta</h1>
+            </div>
+        </section>
+
+        <section class="green">
+            <div class="contenitore">
+            <img src="img/02.png" alt="">
+            <h1>La Nostra scarpa di punta</h1>
+            </div>
+        </section>
+
+        <section class="yellow">
+            <div class="contenitore">
+            <img src="img/03.png" alt="">
+            <h1>La Nostra scarpa di punta</h1>
+            </div>
+        </section>
+    </main>   
 </body>
 </html>
